fixed name alignment

--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,7 @@ nav {
     header {
         grid-column: 2 / span 10;
         grid-template-rows: repeat(3, 50px);
+        justify-content: start;
     }
 
     .name {
